apps/wiki/wiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: wiki
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wiki.kiwilab.dev
    secretName: wiki.kiwilab.dev-cert
  rules:
  - host: wiki.kiwilab.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki-service
            port:
              number: 80
